--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -7,30 +7,35 @@
 ;===========================================
 */
 mat-card {
-    margin-top: 100px;
-    min-width: 25%;
-    max-width: 50%;
-    text-align: center;
+  margin-top: 100px;
+  min-width: 25%;
+  max-width: 50%;
+  text-align: center;
+  background-color: #c8e6c9;
+  color: #1b5e20;
+  font-family: "Bungee", cursive;
 }
 
 h6 {
-    color: red;
+  color: #f9a825;
+  font-family: "Bungee", cursive;
 }
 
 .error {
-    color: red;
+  color: #f9a825;
+  font-family: "Bungee", cursive;
 }
 
 mat-form-field {
-    width: 90%
+  width: 90%;
 }
 
 mat-card-content {
-    margin: 5px;
+  margin: 5px;
 }
 
 button {
-    display: inline-block;
-    min-width: 25%;
+  display: inline-block;
+  min-width: 25%;
+  font-family: "Bungee", cursive;
 }
-
