--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -2,93 +2,54 @@
   ============================================
 ; Title: WEB	450	Bob’s	Computer	Repair	Shop
 ; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Image: https://www.needpix.com/photo/98364/bomb-explosion-explosive-nuclear-nuke-weapon
 ; Date: 17 October 2019
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
-
-<html>
-<ol>
-    <li>
-        <p class="diplome">August 14</p>
-        <span class="point"></span>
-        <p class="description">Prototype</p>
-    </li>
-    <li>
-        <p class="diplome">August 20</p>
-        <span class="point"></span>
-        <p class="description">Code</p>
-    </li>
-    <li>
-        <p class="diplome">September 5</p>
-        <span class="point"></span>
-        <p class="description">Test</p>
-    </li>
-    <li>
-        <p class="diplome">September 6</p>
-        <span class="point"></span>
-        <p class="description">Address Issues</p>
-    </li>
-    <li>
-        <p class="diplome">September 10-11</p>
-        <span class="point"></span>
-        <p class="description"> Test </p>
-    </li>
-    <li>
-        <p class="diplome">September 22</p>
-        <span class="point"></span>
-        <p class="description"> Deploy </p>
-    </li>
-</ol>
-<br />
-<br />
-<div class="about" id="about">
-
-    <mat-card class="example-card">
-        <mat-card-title>
-            <h1>Bob's Story</h1><br>
-        </mat-card-title>
-        <mat-card-subtitle>
-            <h5>Founded in 1989</h5>
-        </mat-card-subtitle>
-        <img src="/assets/images/gadgets.jpg" alt="" style=" width:35%">
-
-        <h6>To best understand our family and where we began is a letter from my father, Peter to his father, Bob.
-            This is how our story begins:</h6>
-        <br />
-        <mat-card-content style="text-align: left">
-
-            <p> Dad,
-                <br />
-                <br>
-                I don't feel I was particularly honest as a child. I did get in trouble when I was younger more often
-                then I
-                would like to admit but that eventually allowed me to join you in your favorite hobby. I know you
-                brought me
-                along so I would stay out of trouble but watching you work on electronics really inspired me, even
-                though I
-                pretended I didn’t care. Over those years I grow to enjoy building, breaking, and tuckering with all
-                sorts
-                of electrons with you. Those really were some of best years of my life, so far.
-                <br />
-                <br>
-                As you know, I have been out of school long enough to know what I want to do with my life.
-                Now that I have grow and experienced some of the world, I am writing you this letter to ask an important
-                question. I want to ask you if you would join me by opening a computer repair store with me. Before you
-                answer, I do have a small condition. I would like to name the shop after you. You have inspired me and
-                encouraged me for as long as I can remember. Now I would like to make you proud (and mom, of course).
-                <br />
-                <br>
-                Hopefully this letter with arrive before I do but I know you will be proud of me regardless of what you
-                decide. I can’t wait to see you and mom and have some of delicious apple pie.
-                <br />
-                <br>
-                Your son,
-            </p>
-            <p style="color:#e7c661"> Peter <br />
-            </p>
-        </mat-card-content>
-    </mat-card>
+<div class="row" id="about">
+  <mat-card class="col">
+    <mat-card-title>
+      <h1>Bob's Computer Repair Shop</h1>
+      <br />
+    </mat-card-title>
+    <mat-card-subtitle>
+      <h5>Founded in 2287</h5>
+    </mat-card-subtitle>
+    <br />
+    <img src="/assets/images/explosion.png" alt="" style="width:50%" />
+  </mat-card>
+  <mat-card class="col" style="text-align: center;">
+    <h6>
+      In the year 2287 Bob’s Computer Repair Shop began their steps to setup
+      shop in Vault 450. Robert Ghouls (Bob), his wife, and their kids began to
+      enjoy their new life underground. Prior to setting up shop, the family had
+      owned a smaller repair station called Echo. Echo became one of the best
+      known shops known for selling old technology and hardware on the black
+      market.
+    </h6>
+    <br />
+    <h6>
+      What their customers didn’t know was a majority of their sales at that
+      time came from selling ancient alien technology the family had been
+      collecting over the years from time travel. Robert’s wife Lilith was an
+      engineer of her own. She had created a time machine originally to stop the
+      rich from taking all technology for themselves. Back in 1997 just as
+      computers were starting to be relevant, Lilith and her team took to the
+      time line to make technology available to all.
+    </h6>
+    <br />
+    <h6>
+      As the years came and went, the Ghoul family's big turning point was the
+      nuclear devastation that occurred in 2019. This event was life changing
+      for all of America as everyone was pushed underground to live in hiding.
+      Robert and his family began a new strategy to live and joined the world in
+      becoming technical experts in every field possible. Lilith became an
+      expert in robotics and soon was one of the best known mechanics
+      underground. As word passed through the millions of vaults, the Ghoul
+      family was able to reopen shop. Being so versed in old and new technology,
+      the family was able to open Bob’s Computer Repair Shop and strive for new
+      goals.
+    </h6>
+  </mat-card>
 </div>
-
-</html>
