--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -8,32 +8,19 @@
 -->
 
 <div class="row">
-    <mat-card class="col">
-        <br />
-
-        <h2>We would love to hear from you!</h2>
-        <p>Not sure where happened to your computer? Don't remember that large crack on your phone screen? Luckily, our
-            team is here to help! Stop by the store or give us a call to see what we can do for you. </p> <br />
-
-    </mat-card>
-    <mat-card class="col">
-        <img src="/assets/images/circles.jpg" style=" width:50%">
-
-        <br />
-        <ul>
-            <li>
-                <h5>1000 Galvin Rd S, </h5>
-            </li>
-            <li>
-                <h5> Bellevue, NE 68005 </h5>
-            </li>
-            <li>
-                <h5>1-555-555-9876</h5>
-            </li>
-            <li>
-                <h5>bobscomputershop@teamtaco.com</h5>
-            </li>
-
-        </ul>
-    </mat-card>
+  <mat-card class="col">
+    <h2>Can't open Pandora's Box? Need your ECHO recorder reset?</h2>
+    <h4>We are always open!</h4>
+    <ul>
+      <li>
+        <h5>Vault 450</h5>
+      </li>
+      <li>
+        <h5>555-0123</h5>
+      </li>
+      <li>
+        <h6>BobsComputerRepairShop@TeamTaco.Com</h6>
+      </li>
+    </ul>
+  </mat-card>
 </div>
