--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,13 +2,45 @@
 ============================================
 ; Title: WEB	450	Bob’s	Computer	Repair	Shop
 ; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Image Links: https://pixabay.com/vectors/person-individually-alone-icon-1824147/
+;              http://www.freestockphotos.biz/stockphoto/15372
+;              http://www.publicdomainfiles.com/show_file.php?id=13973827816404
 ; Date: 17 October 2019
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
 
 <body>
-
-    <img src="/assets/images/bob-large.png">
-    <h1>Welcome!</h1>
+  <h1>Welcome!</h1>
+  <section class="home-section">
+    <ul class="home">
+      <li class="home-list" routerLink="/service-repair">
+        <h2>Our Services</h2>
+        <figure class="home-photo">
+          <img src="/assets/images/computer-repair.png" alt="" />
+        </figure>
+        <span class="overlay">
+            <p>Go to Services Page!</p>
+        </span>
+      </li>
+      <li class="home-list-1" routerLink="/session/about-us">
+        <h2>About Us</h2>
+        <figure class="home-photo">
+          <img src="/assets/images/about-us.png" alt="" />
+        </figure>
+        <span class="overlay">
+            <p>Go to About Us page!</p>
+        </span>
+      </li>
+      <li class="home-list-2" routerLink="/session/contact-us">
+        <h2>Contact Us</h2>
+        <figure class="home-photo">
+          <img src="/assets/images/contact-us.png" alt="" />
+        </figure>
+        <span class="overlay">
+            <p>Go to Contact Us page!</p>
+        </span>
+      </li>
+    </ul>
+  </section>
 </body>
