--- a/src/app/pages/security-questions/security-questions.component.css
+++ b/src/app/pages/security-questions/security-questions.component.css
@@ -7,19 +7,21 @@
 ;===========================================
  */
 
- mat-card{
+mat-card {
   width: 95%;
   margin: auto;
   margin-top: 100px;
+  background-color: #c8e6c9;
+  color: #1b5e20;
 }
 
 h2 {
   text-align: center;
 }
 
- .container {
+.container {
   width: 95%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Bungee", cursive;
   margin: 0 auto;
 }
 
