--- a/src/app/pages/user-management/user-management.component.css
+++ b/src/app/pages/user-management/user-management.component.css
@@ -7,31 +7,32 @@
 ;===========================================
 */
 
-mat-card{
-    width: 95%;
-    margin: auto;
-    margin-top: 100px;
-    background-color: accent;
-    text-align: center;
+mat-card {
+  width: 95%;
+  margin: auto;
+  margin-top: 100px;
+  text-align: center;
+  background-color: #c8e6c9;
+  color: #1b5e20;
+  font-family: "Bungee", cursive;
 }
 
-table{
-    margin: auto;
-    max-width: 95%;
-    position: relative;
+table {
+  margin: auto;
+  max-width: 95%;
+  position: relative;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 input {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .tableCell {
-  display:table-cell;
-  width:80%;
+  display: table-cell;
+  width: 80%;
 }
-
