--- a/src/app/pages/user-registration/user-registration.component.html
+++ b/src/app/pages/user-registration/user-registration.component.html
@@ -83,8 +83,8 @@
                 >
                 <small
                   *ngIf="
-                    form.controls['password'].hasError('required') &&
-                    form.controls['password'].pattern
+                    form.controls['password'].hasError('pattern') &&
+                    form.controls['password'].touched
                   "
                   >Password Does Not Meet Requirements</small
                 >
@@ -159,9 +159,7 @@
                   "
                   >Phone Number Required</small
                 >
-              </div>
-              <address class="formInput">
-                <mat-form-field class="addressInput">
+                <mat-form-field class="formInput">
                   <input
                     type="text"
                     matInput
@@ -176,7 +174,7 @@
                   "
                   >Street Address Required</small
                 >
-                <mat-form-field class="addressInput">
+                <mat-form-field class="formInput">
                   <input
                     type="text"
                     matInput
@@ -191,7 +189,7 @@
                   "
                   >City Required</small
                 >
-                <mat-form-field class="addressInput">
+                <mat-form-field class="formInput">
                   <input
                     type="text"
                     matInput
@@ -206,7 +204,7 @@
                   "
                   >State Required</small
                 >
-                <mat-form-field class="addressInput">
+                <mat-form-field class="formInput">
                   <input
                     type="text"
                     matInput
@@ -221,7 +219,7 @@
                   "
                   >Zip Code Required</small
                 >
-              </address>
+            </div>
             </div>
           </div>
 
