fixing security questions validation

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -65,8 +65,8 @@
     </mat-card-content>
     <br />
     <mat-card-content>
-      <div *ngFor="let question of securityQuestions.result.security_questions">
-        <mat-card-content>{{ question.question_text }}</mat-card-content>
+      <div>
+        <mat-card-content>{{ question1 }}</mat-card-content>
         <mat-form-field>
           <input
             matInput
@@ -75,7 +75,9 @@
             [(ngModel)]="user_answer"
           />
         </mat-form-field>
-        <mat-card-content>{{ question.question_text1 }}</mat-card-content>
+      </div>
+      <div>
+        <mat-card-content>{{ question2 }}</mat-card-content>
         <mat-form-field>
           <input
             matInput
@@ -84,7 +86,9 @@
             [(ngModel)]="user_answer1"
           />
         </mat-form-field>
-        <mat-card-content>{{ question.question_text2 }}</mat-card-content>
+      </div>
+      <div>
+        <mat-card-content>{{ question3 }}</mat-card-content>
         <mat-form-field>
           <input
             matInput
