--- a/src/app/pages/user-registration/user-registration.component.html
+++ b/src/app/pages/user-registration/user-registration.component.html
@@ -255,7 +255,7 @@
                   >
                     <mat-option
                       *ngFor="let question of securityQuestions"
-                      [value]="question.question"
+                      [value]="question._id"
                     >
                       {{ question.question }}
                     </mat-option>
@@ -279,7 +279,7 @@
                   >
                     <mat-option
                       *ngFor="let question of securityQuestions"
-                      [value]="question.question"
+                      [value]="question._id"
                     >
                       {{ question.question }}
                     </mat-option>
@@ -303,7 +303,7 @@
                   >
                     <mat-option
                       *ngFor="let question of securityQuestions"
-                      [value]="question.question"
+                      [value]="question._id"
                     >
                       {{ question.question }}
                     </mat-option>
