--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -11,44 +11,75 @@
   <mat-card>
     <h1>Your Profile</h1>
 
-    <table class="table">
-      <tr>
-        <th>First Name:</th>
-        <td>{{ userData.name_first }}</td>
-      </tr>
-      <tr>
-        <th>Last Name:</th>
-        <td>{{ userData.name_last }}</td>
-      </tr>
-      <tr>
-        <th>Email:</th>
-        <td>{{ userData.email }}</td>
-      </tr>
-      <tr>
-        <th>Phone Number:</th>
-        <td>{{ userData.phone_number }}</td>
-      </tr>
-      <tr>
-        <th>Username:</th>
-        <td>{{ userData.username }}</td>
-      </tr>
-      <tr>
-        <th>
-          Address:
-        </th>
-        <td *ngFor="let address of userData.address">
-          {{ address.street_address }} {{ address.city }}, {{ address.state }},
-          {{ address.zip }}
-        </td>
-      </tr>
-      <tr>
-        <th>
-          Join Date:
-        </th>
-        <td>
-          {{ userData.date_created | date: "medium" }}
-        </td>
-      </tr>
-    </table>
+    <mat-tab-group>
+      <mat-tab label='Personal Information'>
+        <table class="table">
+          <tr>
+            <th>First Name:</th>
+            <td>{{ userData.name_first }}</td>
+          </tr>
+          <tr>
+            <th>Last Name:</th>
+            <td>{{ userData.name_last }}</td>
+          </tr>
+          <tr>
+            <th>Email:</th>
+            <td>{{ userData.email }}</td>
+          </tr>
+          <tr>
+            <th>Phone Number:</th>
+            <td>{{ userData.phone_number }}</td>
+          </tr>
+          <tr>
+            <th>Username:</th>
+            <td>{{ userData.username }}</td>
+          </tr>
+          <tr>
+            <th>
+              Address:
+            </th>
+            <td *ngFor="let address of userData.address">
+              {{ address.street_address }} {{ address.city }}, {{ address.state }},
+              {{ address.zip }}
+            </td>
+          </tr>
+          <tr>
+            <th>
+              Join Date:
+            </th>
+            <td>
+              {{ userData.date_created | date: "medium" }}
+            </td>
+          </tr>
+        </table>
+
+      </mat-tab>
+      <mat-tab label='Your Invoices'>
+        <div *ngIf='isResponse === true'>
+          <mat-card class='invoice-card' *ngFor='let orderData of userInvoices'>
+
+              <h5>Invoice ID: {{ orderData._id }}</h5>
+              <hr>
+              <h5>Services Ordered:</h5>
+              <div *ngFor='let order of orderData.services_ordered'>
+                <p>{{ order.service }}: ${{ order.service_price }}</p>
+              </div>
+              <hr>
+              <h5>Cost of Labor Hours:</h5>
+              <p>${{ orderData.hours }}</p>
+              <hr>
+              <h5>Cost of Additional Parts:</h5>
+              <p>${{ orderData.parts }}</p>
+              <hr>
+              <h6>Invoice total: ${{ orderData.total }}</h6>
+              <h6>Invoice Date: {{ orderData.date | date: "medium" }} </h6>
+
+          </mat-card>
+        </div>
+        <div *ngIf='isResponse === false'>
+          <p>You haven't made any orders.</p>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
   </mat-card>
 </div>
