--- a/src/app/pages/user-profile/user-profile.component.css
+++ b/src/app/pages/user-profile/user-profile.component.css
@@ -13,6 +13,9 @@ mat-card {
   margin-top: 75px;
   text-align: center;
   margin-bottom: 20px;
+  background-color: #c8e6c9;
+  color: #1b5e20;
+  font-family: "Bungee", cursive;
 }
 
 table {
